@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.3-1.4
-Date: 2008-05-18
+Version: 0.3-1.5
+Date: 2008-05-25
 Author: Ingo Feinerer, with contributions from Christian Buchta, Kurt Hornik, David Meyer, and Fridolin Wild
 Maintainer: Ingo Feinerer <h0125130@wu-wien.ac.at>
 Depends: R (>= 2.7.0), filehash, Matrix, methods, Snowball, XML
