@@ -1,3 +1,11 @@
+2008-05-24  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/filter.R: Every filter has now an attribute indicating whether
+	it sould be applied to document level (doclevel).
+
+	* R/textdoccol.R (tmFilter): Set searchFullText as new default
+	filter.
+
 2008-04-23  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/transform.R (replacePatterns): Replaced removeWords by
